# atlas-x-indexer

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
browser-extension/atlasx-capture/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
release_assets/: Atlas-X Indexer_0.1.0_x64-setup.exe.sha256
scripts/: chatgpt-atlasx-capture.user.js  unregister-silent-startup.ps1  windows-build.ps1  windows-dev.ps1
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: capture_server.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: entry_commands.rs  mod.rs
src-tauri/src/db/: manager.rs
src-tauri/src/repositories/: entry_repository.rs
src/components/entries/: entry-card-grid.tsx  entry-filters.tsx  entry-form.tsx  entry-table.tsx  tag-input.tsx
src/components/layout/: app-shell.tsx
src/components/shared/: badge.tsx  (+10 more)
src/lib/: theme.ts  utils.ts
src/pages/: dashboard-page.tsx  entries-page.tsx  entry-detail-page.tsx  entry-form-page.tsx  import-export-page.tsx  not-found-page.tsx  settings-page.tsx
src/routes/: index.tsx
src/schemas/: entry-schema.ts
src/services/: api.ts  import-export.ts
src/stores/: filter-store.ts  notice-store.ts  ui-store.ts
src/types/: models.ts
tests/: entry-schema.test.ts  import-preview.test.ts
